# tula_language

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.template/: c.template  h.template
docs/: EBNF.md  VERSIONS.md  demo-v1.tula  demo-v2.tula
src/: config.h  test.c  test.h  tula.c  tula.h  util.c  util.h
src/common/: buffered_reader.c  buffered_reader.h  exit.c  exit.h  os.c  os.h  strings.c  strings.h  trace.c  trace.h
src/engine/scanner/: scanner.c  scanner.h  token.c  token.h
src/state/: cli.c  cli.h  gstate.c  gstate.h
test/: CMakeLists.txt  it_scanner.tula  test_buffered_reader.c  test_strings.c  test_token.c  unity_config.h
test/integration_tests/: CMakeLists.txt  integration_test_helper.c  integration_test_helper.h  it_scanner.tula  it_scanner_tokens.c  it_scanner_tokens.in  it_scanner_tokens.out  scanner_tokens.tula.in
test/unit_tests/: CMakeLists.txt  test_buffered_reader.c  test_strings.c  unity_config.h
tests/: demo-v1.tula  demo.lua
