cmake_minimum_required(VERSION 4.2)

project(tula C)

################################################################################
# Toolchain / compiler detection
#
# Supported configurations:
#   Windows  — MSVC  (Visual Studio 2019+ or Build Tools)
#   Linux    — GCC   (gcc / binutils from system package manager)
#   macOS    — Clang (Xcode Command Line Tools; ships as the system cc)
#
# CMake's MSVC variable is true for cl.exe.
# On Linux/macOS we treat everything else as GCC-compatible (which Clang is).
################################################################################

if(MSVC)
    message(STATUS "Toolchain: MSVC (Windows)")
elseif(WIN32)
    # Someone passed a non-MSVC compiler on Windows — warn and bail early
    # rather than producing a build that half-works.
    message(FATAL_ERROR
            "Unsupported compiler on Windows. Please use the Visual Studio "
            "toolchain (cl.exe). See README.md - Development Environment.")
elseif(APPLE)
    message(STATUS "Toolchain: Clang (macOS)")
else()
    message(STATUS "Toolchain: GCC (Linux)")
endif()


################################################################################
# Global build settings
################################################################################

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Warning flags — MSVC and GCC/Clang use incompatible syntax
if(MSVC)
    add_compile_options(
            /W3         # Equivalent warning level to -Wall
            /wd4996     # Silence deprecation warnings for POSIX names
    )
else()
    add_compile_options(-Wall -Wextra)
endif()

# Enable Unity memory extension before adding the subdirectory
set(UNITY_EXTENSION_MEMORY ON CACHE BOOL "" FORCE)


################################################################################
# Platform-specific stack trace requirements
#
#   Windows : DbgHelp resolves symbols from the PDB generated by /Zi + /DEBUG.
#   Linux   : -rdynamic exports the binary's own symbols so backtrace_symbols()
#             can resolve function names at runtime.
#   macOS   : Same backtrace() family as Linux; no extra flags needed because
#             the dynamic linker exports symbols by default.
################################################################################

if(WIN32 AND MSVC)
    # /Zi  — write full debug info into a PDB file
    add_compile_options(/Zi)

    # /DEBUG — linker embeds a reference to the PDB in the binary so
    #          DbgHelp (and the CLion debugger) can locate it at runtime.
    add_link_options(/DEBUG)

    set(STACKTRACE_LIBS dbghelp)

elseif(UNIX AND NOT APPLE)
    # Linux: re-export the binary's own symbols into the dynamic linker
    # table so backtrace_symbols() can resolve function names.
    set(STACKTRACE_LINK_OPTIONS -rdynamic)

elseif(APPLE)
    # macOS: backtrace() + dladdr() work without extra flags.
    # Left explicit for clarity / future additions.
endif()


################################################################################
# Define the library for the tula program
################################################################################

add_library(tula_lib STATIC
        src/config.h
        src/tula.h
        src/util.c
        src/util.h
        src/state/cli.c
        src/state/cli.h
        src/common/strings.c
        src/common/strings.h
        src/state/gstate.c
        src/state/gstate.h
        src/engine/scanner/token.c
        src/engine/scanner/token.h
        src/common/buffered_reader.c
        src/common/buffered_reader.h
        src/common/os.c
        src/common/os.h
        src/engine/scanner/scanner.c
        src/engine/scanner/scanner.h
        src/common/trace.c
        src/common/trace.h
        src/common/exit.c
        src/common/exit.h
)
target_include_directories(tula_lib PUBLIC src)

# Stack trace link requirements propagate to every target via PUBLIC so
# tula, tulad, and all test targets inherit them automatically.
if(DEFINED STACKTRACE_LIBS)
    target_link_libraries(tula_lib PUBLIC ${STACKTRACE_LIBS})
endif()

if(DEFINED STACKTRACE_LINK_OPTIONS)
    target_link_options(tula_lib PUBLIC ${STACKTRACE_LINK_OPTIONS})
endif()


################################################################################
# Define the standard tula cli executable (named "tula")
################################################################################

add_executable(tula src/tula.c)
target_link_libraries(tula PRIVATE tula_lib)
target_compile_definitions(tula PRIVATE TULA_EXECUTABLE_TYPE=0)

if(MSVC)
    target_compile_options(tula PRIVATE /WX)    # treat warnings as errors
else()
    target_compile_options(tula PRIVATE -Werror)
endif()


################################################################################
# Define the debugging tula cli executable (named "tulad")
################################################################################

add_executable(tulad src/tula.c)
target_link_libraries(tulad PRIVATE tula_lib)
target_compile_definitions(tulad PRIVATE TULA_EXECUTABLE_TYPE=1)


################################################################################
# Define additional targets
################################################################################

add_subdirectory(vendor/unity)
add_subdirectory(test/integration_tests)
add_subdirectory(test/unit_tests)